# VectorDB

./: Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app.egg-info/: SOURCES.txt
app/api/: __init__.py
app/api/v1/: chunks.py  libraries.py
app/core/: config.py  embedding.py
app/domain/: models.py  repositories.py  services.py
app/infrastructure/: indexing.py
tests/integration/: test_api.py
tests/unit/: test_index.py
