[tool.poetry]
name = "vector_db"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
